source/externs/X11/extensions/randrproto.d


struct xRRGetMonitorsReply {
    BYTE type;
    CARD8 status;
    CARD16 sequenceNumber;
    CARD32 length;
    Time timestamp;
    CARD32 nmonitors;
    CARD32 noutputs;
    CARD32 pad1;
    CARD32 pad2;
    CARD32 pad3;
}
enum sz_xRRGetMonitorsReply =	32;

struct xRRSetMonitorReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    Window window;
    xRRMonitorInfo monitor;
}
enum sz_xRRSetMonitorReq =	32;

struct xRRDeleteMonitorReq {
    CARD8 reqType;
    CARD8 randrReqType;
    CARD16 length;
    Window window;
    Atom name;
}
enum sz_xRRDeleteMonitorReq =	12;

 /* _XRANDRP_H_ */
